[package]
name = "concorde"
description = "reconfigurable lattice agreement"
version = "0.3.0"
authors = ["Graydon Hoare <graydon@pobox.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["lattice", "consensus", "agreement", "crdt"]
repository = "http://github.com/graydon/concorde"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pergola = "0.6.0"
itertools = "0.9.0"
log = "0.4"
im = "15.0.0"


[dev-dependencies]
futures = "0.3.4"
pretty_env_logger = "0.4"
bit-set = "0.5.0"
# Stateright is somewhat WIP and, for now, we want to control versions pretty specifically.
stateright = { path = "../stateright" }
# stateright = { git = "https://github.com/graydon/stateright", rev = "2491fe5420d0c2b148c8eb192f607ce1ac806772" }
num_cpus = "1.13.0"