[package]
name = "concorde"
description = "reconfigurable lattice agreement"
version = "0.5.0"
authors = ["Graydon Hoare <graydon@pobox.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["lattice", "consensus", "agreement", "crdt"]
repository = "http://github.com/graydon/concorde"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pergola = "0.8.1"
itertools = "0.9.0"
log = "0.4"
im = "15.0.0"
serde = "1.0"

[dev-dependencies]
futures = "0.3.5"
pretty_env_logger = "0.4"
bit-set = "0.5.2"
stateright = "0.10.0"
num_cpus = "1.13.0"
